--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.9",
+    "D": "^1.0.0",
+    "js-cookie": "^3.0.5",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
